# signalsmith-stretch-cs

./: .gitignore  .gitmodules  LICENSE.md  README.md  signalsmith-cs.sln
.github/workflows/: build.yml
SignalsmithStretch-cs/: FFT.cs  Lib.cs  STFT.cs  SignalsmithStretch-cs.csproj  Stretch.cs
binding/: CMakeLists.txt  fft.cpp  mod.cpp  stft.cpp
example/: Program.cs  example.csproj
native/osx-arm64/: libSignalsmithStretch.dylib
native/osx-x64/: libSignalsmithStretch.dylib
